syntax = "proto3";

package runtime.v1;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/rilldata/rill/runtime/proto";

service RuntimeService {
  rpc Ping(PingRequest) returns (PingResponse) {
    option (google.api.http) = {
      get: "/v1/ping"
    };
  }

  rpc CreateInstance(CreateInstanceRequest) returns (CreateInstanceResponse) {
    option (google.api.http) = {
      post: "/v1/instances",
      body: "*"
    };
  }

  rpc QueryDirect(QueryDirectRequest) returns (QueryDirectResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/query/direct",
      body: "*"
    };
  }

  rpc MetricsViewMeta(MetricsViewMetaRequest) returns (MetricsViewMetaResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/metrics-views/{metrics_view_name}/meta",
      body: "*"
    };
  }

  rpc MetricsViewToplist(MetricsViewToplistRequest) returns (MetricsViewToplistResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/metrics-views/{metrics_view_name}/toplist/{dimension_name}",
      body: "*"
    };
  }

  rpc MetricsViewTimeSeries(MetricsViewTimeSeriesRequest) returns (MetricsViewTimeSeriesResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/metrics-views/{metrics_view_name}/timeseries",
      body: "*"
    };
  }
}

message PingRequest {}

message PingResponse {
  string message = 1;
}

message CreateInstanceRequest {
  string driver = 1;
  string dsn = 2;
}

message CreateInstanceResponse {
  string instance_id = 1;
}

message QueryDirectRequest {
  string instance_id = 1;
  string sql = 2;
  repeated google.protobuf.Value args = 3;
  int64 priority = 4;
  bool dry_run = 5;
}

message QueryDirectResponse {
  repeated SchemaColumn meta = 1;
  repeated google.protobuf.Struct data = 2;
}

message MetricsViewMetaRequest {
  string instance_id = 1;
  string metrics_view_name = 2;
}

message MetricsViewMetaResponse {
  string metrics_view_name = 1;
  repeated MetricsViewDimension dimensions = 2;
  repeated MetricsViewMeasure measures = 3;
}

message MetricsViewToplistRequest {
  string instance_id = 1;
  string metrics_view_name = 2;
  string dimension_name = 3;
  repeated string measure_names = 4;
  int64 time_start = 5;
  int64 time_end = 6;
  int64 limit = 7;
  int64 offset = 8;
  repeated MetricsViewSort sort = 9;
  MetricsViewFilter filter = 10;
}

message MetricsViewToplistResponse {
  repeated SchemaColumn meta = 1;
  repeated google.protobuf.Struct data = 2;
}

message MetricsViewTimeSeriesRequest {
  string instance_id = 1;
  string metrics_view_name = 2;
  repeated string measure_names = 3;
  int64 time_start = 4;
  int64 time_end = 5;
  string time_granularity = 6;
  MetricsViewFilter filter = 7;
}

message MetricsViewTimeSeriesResponse {
  repeated SchemaColumn meta = 1;
  repeated google.protobuf.Struct data = 2;
}

message SchemaColumn {
  string name = 1;
  string type = 2;
  bool nullable = 3;
}

message MetricsViewDimension {
  string name = 1;
  string type = 2;
  bool primary_time = 3;
}

message MetricsViewMeasure {
  string name = 1;
  string type = 2;
  string description = 3;
}

message MetricsViewSort {
  string name = 1;
  bool ascending = 2;
}

message MetricsViewFilter {
  repeated MetricsViewFilterCond include = 1;
  repeated MetricsViewFilterCond exclude = 2;
}

message MetricsViewFilterCond {
  string name = 1;
  repeated google.protobuf.Value values = 2;
}
